--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
-    "@angular/cdk": "^12.1.4",
+    "@angular/cdk": "^12.2.0",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.1.2",
+    "@angular/material": "^12.2.0",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@fullcalendar/core": "^5.9.0",
+    "@types/jasminewd2": "^2.0.10",
+    "chart.js": "^3.5.0",
+    "primeflex": "^3.0.1",
+    "primeicons": "^4.1.0",
     "primeng": "^12.0.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
